Fix: avatar stretches navigation

--- a/public/css/customize_semantic.css
+++ b/public/css/customize_semantic.css
@@ -10,6 +10,11 @@
 	margin-left: 5px !important;
 }
 
+.menu #user {
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
 
 /*
  ========== OVERALL ==========
